# zero2prod

./: .env.sample  .gitignore  Cargo.toml  Dockerfile  configuration.yaml  service.yaml  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20210815121912_create_subscriptions_table.sql  20211231163554_make_status_not_null_in_subscriptions.sql  20211231165728_create_subscription_tokens_table.sql  20220105221130_create_users_table.sql  20220107202921_rename_password_column.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  domain.rs  email.rs  errors.rs  lib.rs  main.rs  routes.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/configuration/: application_settings.rs  database_settings.rs  email_settings.rs  environment.rs  settings.rs
src/domain/: new_subscriber.rs  subscribe.rs  subscriber_email.rs  subscriber_name.rs
src/email/: email_client.rs
src/errors/: auth_error.rs  helper.rs  publish_error.rs  store_token_error.rs  subscribe_error.rs
src/helpers/: auth.rs  authentication.rs
src/routes/: auth.rs  dashboard.rs  newsletter.rs  prelude.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/auth/: helper.rs  helpers.rs  login.rs  validate_credentials.rs
src/routes/dashboard/: admin_dashboard.rs  logout.rs  password.rs
src/routes/health_check/: health.rs
src/routes/newsletter/: helper.rs  route.rs
src/routes/pages/: login.html
src/routes/pages/home/: home.html
src/routes/subscriptions/: error.rs  helpers.rs  route.rs  subscribe.rs
src/routes/subscriptions_confirm/: helpers.rs  route.rs
src/startup/: application.rs  build.rs  run.rs
tests/: health_check.rs
tests/api/: change_password.rs  dashboard.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/api/helpers/: app.rs  db.rs  email.rs  user.rs
tests/common/: mod.rs
