[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"


[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
actix-rt = "2.2.0"
serde = "1.0.127"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.2.20", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.2.5"
tracing-actix-web = "0.4.0-beta.11"
tracing-log = "0.1.2"
serde-aux = "2.3.0"
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
reqwest = "0.11"
tokio = "1"
once_cell = "1.8.0"
