[package]
name = "zero2prod"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"


[[bin]]
name = "zero2prod"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.8"
actix-rt = "2.2.0"
serde = "1.0.127"
config = "0.11.0"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1.26", features = ["log"] }
tracing-subscriber = { version = "0.2.20", features = ["registry", "env-filter"] }
tracing-futures = "0.2.5"
tracing-bunyan-formatter = "0.2.4"
tracing-actix-web = "0.4.0-beta.8"
tracing-log = "0.1.2"
serde-aux = "2.3.0"
log = "0.4"
unicode-segmentation = "1.8.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
validator = "0.14.0"
tokio = { version = "1", features = ["rt", "macros"] }
rand = { version = "0.8", features=["std_rng"]}
thiserror = "1"
anyhow = "1"
secrecy = { version = "0.8.0", features = ["serde"] }
base64 = "0.13"
pbkdf2 = { version = "0.10.0", features= ["std"] }
rand_core = { version = "0.6", features = ["std"] }
urlencoding = "2"
htmlescape = "0.3"
hmac = { version = "0.11", features = ["std"] }
sha2 = "0.10"
[dependencies.sqlx]
version = "0.5.9"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
tokio = "1"
once_cell = "1.8.0"
claim = "0.5.0"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5"
serde_json = "1"
linkify = "0.5"